fixed about content spacing

--- a/imports/ui/stylesheets/landing.scss
+++ b/imports/ui/stylesheets/landing.scss
@@ -216,7 +216,10 @@
 .parallax-about-content {
   position: relative;
   width: 100%;
-  padding-bottom: 2em;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 .about-skills {
   margin: 1em 0 2em 0;
