--- a/imports/ui/stylesheets/parallax.scss
+++ b/imports/ui/stylesheets/parallax.scss
@@ -19,6 +19,7 @@
 .parallax-about-section {
   position: relative;
   width: 100%;
+  height: 100vh;
   z-index: 2;
   background: white;
   -webkit-backface-visibility: hidden;
